@@ -1,3 +1,10 @@
+Thu Apr 14 19:17:04 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/Bug_3943_Regression_Test.cpp:
+
+          Scoreboard cleanup. "small" appears to be a reserved word on some
+          win32 builds.
+
 Thu Apr 14 09:27:20 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * include/makeinclude/platform_freebsd.GNU:
